Bilbo renamed to Bilbo Pro in source and config files'

--- a/sources/config.yml
+++ b/sources/config.yml
@@ -1,6 +1,6 @@
 sources:
-  - Bilbo-Regular.glyphs
-familyName: "Bilbo"
+  - BilboPro.glyphs
+familyName: "Bilbo Pro"
 buildVariable: false
 autohintTTF: false
 
